--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,25 +2,166 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Kufam&family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Fjalla+One&family=Kufam&family=PT+Sans+Narrow:wght@400;700&family=Righteous&display=swap");
 @font-face {
     font-family: "Bintang";
     src: url("../assets/Bintang.ttf");
 }
 @layer base {
-  html {
-    font-family: 'Kufam', sans-serif;
-    background-color: #01849a;
-  }
+    html {
+        font-family: "Kufam", sans-serif;
+        background-color: #01849a;
+    }
 }
 @layer components {
-  .logoFont {
-    font-family: "Bintang";
-  }
-  .titleLetter {
-    font-family: 'Righteous', cursive;
-  }
-  .subTitleLetter {
-    font-family: 'Courgette', cursive;
-  }
+    .logoFont {
+        font-family: "Bintang";
+    }
+    .titleLetter {
+        font-family: "Righteous", cursive;
+    }
+    .subTitleLetter {
+        font-family: "Courgette", cursive;
+    }
+    .articleTitle {
+        font-family: "Fjalla One", sans-serif;
+    }
+    .articleText {
+        font-family: "PT Sans Narrow", sans-serif;
+    }
+
+    /* Blockquote design */
+    /* Thanks to https://codepen.io/johnfinkdesign/pen/gRvEGq */
+    blockquote {
+        border-left: 3px solid #01849a;
+        color: #3c3c3c;
+        font-size: 1em;
+        font-style: italic;
+        line-height: 1.8em;
+        margin: 1em 0em 1em 2em;
+        padding: 0em 2em;
+        position: relative;
+        transition: 0.2s border ease-in-out;
+        z-index: 0;
+    }
+    blockquote:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -4px;
+        height: 2em;
+        background-color: #ffffff;
+        width: 5px;
+        margin-top: -1em;
+    }
+    blockquote:after {
+        content: "\201C";
+        position: absolute;
+        left: -0.5em;
+        color: #01849a;
+        font-size: 4em;
+        font-family: "Ionicons";
+        font-style: normal;
+        line-height: 1em;
+        text-align: center;
+        text-indent: -2px;
+        width: 1em;
+        margin-top: -0.5em;
+        transition: 0.2s all ease-in-out, 0.4s transform ease-in-out;
+    }
+    blockquote:active:after {
+        transform: rotateY(360deg);
+    }
+    @media only screen and (max-width: 576px) {
+      blockquote:after {
+        top: 56%;
+      }
+    }
+    @media only screen and (min-width: 576px) {
+      blockquote:after {
+        top: 59%;
+      }
+    }
+    @media only screen and (min-width: 768px) {
+      blockquote:after {
+        top: 55%;
+      }
+    }
+    @media only screen and (min-width: 992px) {
+      blockquote:after {
+        top: 58%;
+      }
+    }
+    @media only screen and (min-width: 1200px) {
+      blockquote:after {
+        top: 60%;
+      }
+    }
+    @media only screen and (min-width: 1400px) {
+      blockquote:after {
+        top: 63%;
+      }
+    }
+
+    /* blinking cursor */
+    /* Thanks to https://codepen.io/ArtemGordinsky/pen/DgyQKy */
+    .blinking-cursor {
+        font-weight: 100;
+        color: #01849a;
+        -webkit-animation: 1s blink step-end infinite;
+        -moz-animation: 1s blink step-end infinite;
+        -ms-animation: 1s blink step-end infinite;
+        -o-animation: 1s blink step-end infinite;
+        animation: 1s blink step-end infinite;
+    }
+
+    @keyframes "blink" {
+        from,
+        to {
+            color: transparent;
+        }
+        50% {
+            color: #01849a;
+        }
+    }
+
+    @-moz-keyframes blink {
+        from,
+        to {
+            color: transparent;
+        }
+        50% {
+            color: #01849a;
+        }
+    }
+
+    @-webkit-keyframes "blink" {
+        from,
+        to {
+            color: transparent;
+        }
+        50% {
+            color: #01849a;
+        }
+    }
+
+    @-ms-keyframes "blink" {
+        from,
+        to {
+            color: transparent;
+        }
+        50% {
+            color: #01849a;
+        }
+    }
+
+    @-o-keyframes "blink" {
+        from,
+        to {
+            color: transparent;
+        }
+        50% {
+            color: #01849a;
+        }
+    }
 }
