--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Courgette&family=Fjalla+One&family=Kufam&family=PT+Sans+Narrow:wght@400;700&family=Righteous&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Courgette&family=Fjalla+One&family=Kufam:wght@400;600;700&family=PT+Sans+Narrow:wght@400;700&family=Righteous&display=swap);
 /*!
  * Font Awesome Free 6.0.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
@@ -9615,6 +9615,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .articleText {
         font-family: "PT Sans Narrow", sans-serif;
     }
+.articleText a{
+        color: #01849a;
+        font-weight: bold;
+    }
 /* Blockquote design */
 /* Thanks to https://codepen.io/johnfinkdesign/pen/gRvEGq */
 blockquote {
@@ -9751,11 +9755,14 @@ blockquote:active:after {
 .z-10 {
   z-index: 10;
 }
-.order-2 {
-  order: 2;
+.z-0 {
+  z-index: 0;
 }
 .order-1 {
   order: 1;
+}
+.order-2 {
+  order: 2;
 }
 .order-3 {
   order: 3;
@@ -9769,10 +9776,6 @@ blockquote:active:after {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -9804,11 +9807,23 @@ blockquote:active:after {
 .mt-24 {
   margin-top: 6rem;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.-mr-1 {
+  margin-right: -0.25rem;
+}
+.ml-3 {
+  margin-left: 0.75rem;
+}
+.-ml-px {
+  margin-left: -1px;
 }
 .block {
   display: block;
@@ -9816,11 +9831,17 @@ blockquote:active:after {
 .flex {
   display: flex;
 }
+.inline-flex {
+  display: inline-flex;
+}
 .grid {
   display: grid;
 }
 .hidden {
   display: none;
+}
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 .h-5 {
   height: 1.25rem;
@@ -9830,6 +9851,9 @@ blockquote:active:after {
 }
 .h-16 {
   height: 4rem;
+}
+.h-full {
+  height: 100%;
 }
 .h-24 {
   height: 6rem;
@@ -9846,11 +9870,14 @@ blockquote:active:after {
 .h-screen {
   height: 100vh;
 }
-.h-full {
-  height: 100%;
+.h-4 {
+  height: 1rem;
 }
 .h-\[120px\] {
   height: 120px;
+}
+.h-52 {
+  height: 13rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -9870,29 +9897,41 @@ blockquote:active:after {
 .w-full {
   width: 100%;
 }
-.w-10 {
-  width: 2.5rem;
+.w-1\/4 {
+  width: 25%;
 }
 .w-3\/4 {
   width: 75%;
 }
+.w-10 {
+  width: 2.5rem;
+}
 .w-0 {
   width: 0px;
 }
-.w-5\/6 {
-  width: 83.333333%;
+.w-11\/12 {
+  width: 91.666667%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-2\/3 {
   width: 66.666667%;
 }
-.w-11\/12 {
-  width: 91.666667%;
+.w-4 {
+  width: 1rem;
+}
+.w-5\/6 {
+  width: 83.333333%;
 }
 .w-\[120px\] {
   width: 120px;
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .-translate-y-1\.5 {
   --tw-translate-y: -0.375rem;
@@ -9936,6 +9975,9 @@ blockquote:active:after {
 .cursor-pointer {
   cursor: pointer;
 }
+.cursor-default {
+  cursor: default;
+}
 .resize-y {
   resize: vertical;
 }
@@ -9951,6 +9993,9 @@ blockquote:active:after {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
 }
@@ -9963,20 +10008,29 @@ blockquote:active:after {
 .justify-center {
   justify-content: center;
 }
-.gap-8 {
-  gap: 2rem;
+.justify-between {
+  justify-content: space-between;
 }
-.gap-4 {
-  gap: 1rem;
+.justify-items-center {
+  justify-items: center;
+}
+.gap-2 {
+  gap: 0.5rem;
 }
 .gap-1 {
   gap: 0.25rem;
 }
+.gap-4 {
+  gap: 1rem;
+}
+.gap-8 {
+  gap: 2rem;
+}
 .gap-12 {
   gap: 3rem;
 }
-.gap-2 {
-  gap: 0.5rem;
+.gap-0 {
+  gap: 0px;
 }
 .gap-3 {
   gap: 0.75rem;
@@ -9984,14 +10038,40 @@ blockquote:active:after {
 .overflow-hidden {
   overflow: hidden;
 }
-.rounded-3xl {
-  border-radius: 1.5rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 .rounded-full {
   border-radius: 9999px;
 }
-.rounded {
-  border-radius: 0.25rem;
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+.rounded-l-lg {
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-r-none {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 .rounded-tl-2xl {
   border-top-left-radius: 1rem;
@@ -9999,14 +10079,35 @@ blockquote:active:after {
 .rounded-bl-2xl {
   border-bottom-left-radius: 1rem;
 }
+.rounded-tl-full {
+  border-top-left-radius: 9999px;
+}
+.rounded-bl-full {
+  border-bottom-left-radius: 9999px;
+}
+.rounded-tr-full {
+  border-top-right-radius: 9999px;
+}
+.rounded-br-full {
+  border-bottom-right-radius: 9999px;
+}
+.rounded-tl-lg {
+  border-top-left-radius: 0.5rem;
+}
+.rounded-bl-lg {
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-tr-none {
+  border-top-right-radius: 0px;
+}
 .border {
   border-width: 1px;
 }
-.border-4 {
-  border-width: 4px;
-}
 .border-2 {
   border-width: 2px;
+}
+.border-4 {
+  border-width: 4px;
 }
 .border-y-4 {
   border-top-width: 4px;
@@ -10028,6 +10129,10 @@ blockquote:active:after {
 .border-themeColor {
   --tw-border-opacity: 1;
   border-color: rgb(1 132 154 / var(--tw-border-opacity));
+}
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -10051,11 +10156,21 @@ blockquote:active:after {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
 .p-6 {
   padding: 1.5rem;
 }
 .p-4 {
   padding: 1rem;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-5 {
+  padding: 1.25rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -10069,6 +10184,10 @@ blockquote:active:after {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -10081,29 +10200,25 @@ blockquote:active:after {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-48 {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-60 {
+  padding-top: 15rem;
+  padding-bottom: 15rem;
 }
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.py-40 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -10119,6 +10234,15 @@ blockquote:active:after {
 }
 .pl-4 {
   padding-left: 1rem;
+}
+.pr-2 {
+  padding-right: 0.5rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pr-4 {
+  padding-right: 1rem;
 }
 .pl-10 {
   padding-left: 2.5rem;
@@ -10180,11 +10304,26 @@ blockquote:active:after {
 .font-normal {
   font-weight: 400;
 }
+.font-medium {
+  font-weight: 500;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.italic {
+  font-style: italic;
+}
 .leading-7 {
   line-height: 1.75rem;
 }
 .leading-snug {
   line-height: 1.375;
+}
+.leading-5 {
+  line-height: 1.25rem;
+}
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -10218,13 +10357,17 @@ blockquote:active:after {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .text-themeColor {
   --tw-text-opacity: 1;
   color: rgb(1 132 154 / var(--tw-text-opacity));
 }
-.text-black {
+.text-red-500 {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .text-red-700 {
   --tw-text-opacity: 1;
@@ -10237,6 +10380,9 @@ blockquote:active:after {
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+.underline-offset-4 {
+  text-underline-offset: 4px;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
@@ -10259,9 +10405,23 @@ blockquote:active:after {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+.ring-gray-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -10277,6 +10437,9 @@ blockquote:active:after {
 }
 .duration-500 {
   transition-duration: 500ms;
+}
+.duration-150 {
+  transition-duration: 150ms;
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -10305,6 +10468,14 @@ blockquote:active:after {
   --tw-text-opacity: 1;
   color: rgb(1 132 154 / var(--tw-text-opacity));
 }
+.hover\:text-gray-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.hover\:text-gray-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -10319,6 +10490,13 @@ blockquote:active:after {
 .hover\:underline-offset-4:hover {
   text-underline-offset: 4px;
 }
+.focus\:z-10:focus {
+  z-index: 10;
+}
+.focus\:border-blue-300:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(147 197 253 / var(--tw-border-opacity));
+}
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -10328,9 +10506,26 @@ blockquote:active:after {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus\:ring-themeColor:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(1 132 154 / var(--tw-ring-opacity));
+}
+.active\:bg-gray-100:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.active\:text-gray-700:active {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.active\:text-gray-500:active {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 @media (prefers-color-scheme: dark) {
 
@@ -10374,8 +10569,20 @@ blockquote:active:after {
     display: block;
   }
 
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
   .sm\:h-20 {
     height: 5rem;
+  }
+
+  .sm\:flex-1 {
+    flex: 1 1 0%;
   }
 
   .sm\:items-center {
@@ -10413,20 +10620,24 @@ blockquote:active:after {
 }
 @media (min-width: 768px) {
 
-  .md\:order-1 {
-    order: 1;
+  .md\:order-3 {
+    order: 3;
   }
 
   .md\:order-2 {
     order: 2;
   }
 
-  .md\:order-3 {
-    order: 3;
+  .md\:order-1 {
+    order: 1;
   }
 
   .md\:row-span-3 {
     grid-row: span 3 / span 3;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:flex {
@@ -10445,6 +10656,14 @@ blockquote:active:after {
     height: 180px;
   }
 
+  .md\:w-1\/6 {
+    width: 16.666667%;
+  }
+
+  .md\:w-5\/6 {
+    width: 83.333333%;
+  }
+
   .md\:w-2\/5 {
     width: 40%;
   }
@@ -10453,8 +10672,16 @@ blockquote:active:after {
     width: 20%;
   }
 
+  .md\:w-3\/4 {
+    width: 75%;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:w-1\/2 {
@@ -10467,6 +10694,10 @@ blockquote:active:after {
 
   .md\:w-\[180px\] {
     width: 180px;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
   }
 
   .md\:resize-none {
@@ -10485,6 +10716,18 @@ blockquote:active:after {
     flex-direction: row;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
   .md\:justify-start {
     justify-content: flex-start;
   }
@@ -10497,12 +10740,24 @@ blockquote:active:after {
     gap: 1rem;
   }
 
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .md\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
   .md\:border-t-0 {
     border-top-width: 0px;
   }
 
   .md\:border-l {
     border-left-width: 1px;
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
   }
 
   .md\:px-48 {
@@ -10529,6 +10784,11 @@ blockquote:active:after {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 @media (min-width: 1024px) {
