--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9615,9 +9615,27 @@ Ensure the default browser behavior of the `hidden` attribute.
 .articleText {
         font-family: "PT Sans Narrow", sans-serif;
     }
-.articleText a{
+.articleText a {
         color: #01849a;
         font-weight: bold;
+    }
+.categoryTitle:before,
+    .categoryTitle:after {
+        background-color: #01849a;
+        content: "";
+        display: inline-block;
+        height: 8px;
+        position: relative;
+        vertical-align: middle;
+        width: 100%;
+    }
+.categoryTitle:before {
+        right: 0.4em;
+        margin-left: -97%;
+    }
+.categoryTitle:after {
+        left: 0.4em;
+        margin-right: -50%;
     }
 /* Blockquote design */
 /* Thanks to https://codepen.io/johnfinkdesign/pen/gRvEGq */
@@ -9662,34 +9680,34 @@ blockquote:active:after {
         transform: rotateY(360deg);
     }
 @media only screen and (max-width: 576px) {
-      blockquote:after {
-        top: 56%;
-      }
+        blockquote:after {
+            top: 56%;
+        }
     }
 @media only screen and (min-width: 576px) {
-      blockquote:after {
-        top: 59%;
-      }
+        blockquote:after {
+            top: 59%;
+        }
     }
 @media only screen and (min-width: 768px) {
-      blockquote:after {
-        top: 55%;
-      }
+        blockquote:after {
+            top: 55%;
+        }
     }
 @media only screen and (min-width: 992px) {
-      blockquote:after {
-        top: 58%;
-      }
+        blockquote:after {
+            top: 58%;
+        }
     }
 @media only screen and (min-width: 1200px) {
-      blockquote:after {
-        top: 60%;
-      }
+        blockquote:after {
+            top: 60%;
+        }
     }
 @media only screen and (min-width: 1400px) {
-      blockquote:after {
-        top: 63%;
-      }
+        blockquote:after {
+            top: 63%;
+        }
     }
 /* blinking cursor */
 /* Thanks to https://codepen.io/ArtemGordinsky/pen/DgyQKy */
@@ -9773,6 +9791,9 @@ blockquote:active:after {
 .row-span-1 {
   grid-row: span 1 / span 1;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -9807,9 +9828,6 @@ blockquote:active:after {
 .mt-24 {
   margin-top: 6rem;
 }
-.mr-4 {
-  margin-right: 1rem;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -9818,6 +9836,9 @@ blockquote:active:after {
 }
 .-mr-1 {
   margin-right: -0.25rem;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -9855,6 +9876,9 @@ blockquote:active:after {
 .h-full {
   height: 100%;
 }
+.h-4 {
+  height: 1rem;
+}
 .h-24 {
   height: 6rem;
 }
@@ -9870,17 +9894,72 @@ blockquote:active:after {
 .h-screen {
   height: 100vh;
 }
-.h-4 {
-  height: 1rem;
-}
 .h-\[120px\] {
   height: 120px;
 }
-.h-52 {
-  height: 13rem;
+.h-96 {
+  height: 24rem;
+}
+.h-36 {
+  height: 9rem;
+}
+.h-72 {
+  height: 18rem;
+}
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+.h-1\/2 {
+  height: 50%;
+}
+.h-60 {
+  height: 15rem;
+}
+.h-64 {
+  height: 16rem;
+}
+.h-80 {
+  height: 20rem;
+}
+.h-auto {
+  height: auto;
+}
+.h-\[82px\] {
+  height: 82px;
+}
+.h-\[90\] {
+  height: 90;
+}
+.h-\[90px\] {
+  height: 90px;
+}
+.h-\[900px\] {
+  height: 900px;
+}
+.h-\[20rem\] {
+  height: 20rem;
+}
+.h-\[22rem\] {
+  height: 22rem;
+}
+.max-h-96 {
+  max-height: 24rem;
+}
+.max-h-full {
+  max-height: 100%;
+}
+.max-h-36 {
+  max-height: 9rem;
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.min-h-max {
+  min-height: -webkit-max-content;
+  min-height: -moz-max-content;
+  min-height: max-content;
 }
 .w-5 {
   width: 1.25rem;
@@ -9897,18 +9976,6 @@ blockquote:active:after {
 .w-full {
   width: 100%;
 }
-.w-1\/4 {
-  width: 25%;
-}
-.w-3\/4 {
-  width: 75%;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-0 {
-  width: 0px;
-}
 .w-11\/12 {
   width: 91.666667%;
 }
@@ -9920,6 +9987,18 @@ blockquote:active:after {
 }
 .w-4 {
   width: 1rem;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-3\/4 {
+  width: 75%;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-0 {
+  width: 0px;
 }
 .w-5\/6 {
   width: 83.333333%;
@@ -9978,6 +10057,12 @@ blockquote:active:after {
 .cursor-default {
   cursor: default;
 }
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
 .resize-y {
   resize: vertical;
 }
@@ -9992,6 +10077,9 @@ blockquote:active:after {
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 .items-start {
   align-items: flex-start;
@@ -10011,14 +10099,14 @@ blockquote:active:after {
 .justify-between {
   justify-content: space-between;
 }
-.justify-items-center {
-  justify-items: center;
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-0 {
+  gap: 0px;
 }
 .gap-2 {
   gap: 0.5rem;
-}
-.gap-1 {
-  gap: 0.25rem;
 }
 .gap-4 {
   gap: 1rem;
@@ -10029,14 +10117,17 @@ blockquote:active:after {
 .gap-12 {
   gap: 3rem;
 }
-.gap-0 {
-  gap: 0px;
+.gap-32 {
+  gap: 8rem;
 }
 .gap-3 {
   gap: 0.75rem;
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -10047,15 +10138,8 @@ blockquote:active:after {
 .rounded-3xl {
   border-radius: 1.5rem;
 }
-.rounded-lg {
-  border-radius: 0.5rem;
-}
 .rounded-md {
   border-radius: 0.375rem;
-}
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -10064,14 +10148,6 @@ blockquote:active:after {
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
-}
-.rounded-l-lg {
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-.rounded-r-none {
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
 }
 .rounded-tl-2xl {
   border-top-left-radius: 1rem;
@@ -10090,15 +10166,6 @@ blockquote:active:after {
 }
 .rounded-br-full {
   border-bottom-right-radius: 9999px;
-}
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem;
-}
-.rounded-bl-lg {
-  border-bottom-left-radius: 0.5rem;
-}
-.rounded-tr-none {
-  border-top-right-radius: 0px;
 }
 .border {
   border-width: 1px;
@@ -10133,6 +10200,22 @@ blockquote:active:after {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-red-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+.border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+.border-green-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 83 45 / var(--tw-border-opacity));
+}
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -10169,9 +10252,6 @@ blockquote:active:after {
 .p-2 {
   padding: 0.5rem;
 }
-.p-5 {
-  padding: 1.25rem;
-}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -10204,9 +10284,9 @@ blockquote:active:after {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.py-60 {
-  padding-top: 15rem;
-  padding-bottom: 15rem;
+.py-36 {
+  padding-top: 9rem;
+  padding-bottom: 9rem;
 }
 .px-12 {
   padding-left: 3rem;
@@ -10219,6 +10299,10 @@ blockquote:active:after {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.py-52 {
+  padding-top: 13rem;
+  padding-bottom: 13rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -10271,6 +10355,10 @@ blockquote:active:after {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -10286,10 +10374,6 @@ blockquote:active:after {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
-}
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -10353,10 +10437,6 @@ blockquote:active:after {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -10364,6 +10444,10 @@ blockquote:active:after {
 .text-themeColor {
   --tw-text-opacity: 1;
   color: rgb(1 132 154 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -10380,9 +10464,6 @@ blockquote:active:after {
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-}
-.underline-offset-4 {
-  text-underline-offset: 4px;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
@@ -10419,10 +10500,6 @@ blockquote:active:after {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-.ring-gray-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
-}
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -10452,6 +10529,10 @@ blockquote:active:after {
   --tw-border-opacity: 1;
   border-color: rgb(1 132 154 / var(--tw-border-opacity));
 }
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .hover\:bg-themeColor:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(1 132 154 / var(--tw-bg-opacity));
@@ -10467,14 +10548,6 @@ blockquote:active:after {
 .hover\:text-themeColor:hover {
   --tw-text-opacity: 1;
   color: rgb(1 132 154 / var(--tw-text-opacity));
-}
-.hover\:text-gray-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.hover\:text-gray-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
@@ -10506,11 +10579,6 @@ blockquote:active:after {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .focus\:ring-themeColor:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(1 132 154 / var(--tw-ring-opacity));
@@ -10523,9 +10591,9 @@ blockquote:active:after {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.active\:text-gray-500:active {
+.active\:text-themeColor:active {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(1 132 154 / var(--tw-text-opacity));
 }
 @media (prefers-color-scheme: dark) {
 
@@ -10656,6 +10724,30 @@ blockquote:active:after {
     height: 180px;
   }
 
+  .md\:h-\[22rem\] {
+    height: 22rem;
+  }
+
+  .md\:h-\[24rem\] {
+    height: 24rem;
+  }
+
+  .md\:h-\[23rem\] {
+    height: 23rem;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:w-1\/6 {
     width: 16.666667%;
   }
@@ -10672,18 +10764,6 @@ blockquote:active:after {
     width: 20%;
   }
 
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -10694,10 +10774,6 @@ blockquote:active:after {
 
   .md\:w-\[180px\] {
     width: 180px;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
   }
 
   .md\:resize-none {
@@ -10720,8 +10796,8 @@ blockquote:active:after {
     flex-direction: column;
   }
 
-  .md\:flex-wrap {
-    flex-wrap: wrap;
+  .md\:items-start {
+    align-items: flex-start;
   }
 
   .md\:items-center {
@@ -10742,10 +10818,6 @@ blockquote:active:after {
 
   .md\:gap-2 {
     gap: 0.5rem;
-  }
-
-  .md\:rounded-lg {
-    border-radius: 0.5rem;
   }
 
   .md\:border-t-0 {
@@ -10781,21 +10853,137 @@ blockquote:active:after {
     text-align: justify;
   }
 
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 @media (min-width: 1024px) {
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-\[24rem\] {
+    height: 24rem;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
+  }
+
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .lg\:p-5 {
+    padding: 1.25rem;
+  }
 
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:h-\[24rem\] {
+    height: 24rem;
+  }
+
+  .xl\:w-3\/4 {
+    width: 75%;
+  }
+
+  .xl\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:flex-col {
+    flex-direction: column;
+  }
+
+  .xl\:items-start {
+    align-items: flex-start;
+  }
+
+  .xl\:gap-4 {
+    gap: 1rem;
+  }
+
+  .xl\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .xl\:p-5 {
+    padding: 1.25rem;
+  }
+
+  .xl\:text-left {
+    text-align: left;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
